fix h level skipping fix contrast ratio

--- a/src/BlogEngine.Site/wwwroot/css/layout.css
+++ b/src/BlogEngine.Site/wwwroot/css/layout.css
@@ -156,7 +156,7 @@
   .subheader {
     font-size: 1.2em;
     font-weight: normal;
-    color: #8f8f8f;
+    color: #595959;
     margin-bottom: 1em;
   }
 
