--- a/src/BlogEngine.Site/wwwroot/css/site.css
+++ b/src/BlogEngine.Site/wwwroot/css/site.css
@@ -32,7 +32,7 @@ article div.text ul,
 article div.text ol { font-size: 1.5em; }
 
 aside ul { margin: 0; }
-aside h4 { color: #8f8f8f;margin-bottom: .5em;font-size: 1em; }
+aside h4, aside h3 { color: #595959;margin-bottom: .5em;font-size: 1em; }
 aside small, article footer small {color: #999; font-size:.8em;}
 aside section { margin-bottom: 2em; }
 
